src/tests/functionality/assignment_3_io_arrays_comments/valid/08_mandatory_include_stdio_printf_all_codes.c
#include <stdio.h>
int main() {
    int dec = 42;
    int hex = 255;
    float f = 3.5;
    char c = 'A';
    char *s = "text";
    printf("d=%d x=%x s=%s f=%f c=%c %%\n", dec, hex, s, f, c);
    return 0;
}
