src/tests/functionality/assignment_3_io_arrays_comments/invalid_semantic/10_mandatory_printf_format_argument_count.c
#include <stdio.h>
int main() {
    int x = 1;
    printf("%d %d\n", x);
    return 0;
}
